fix(table): fix fixed column background style issue in dark mode (#3398)

--- a/packages/web-vue/components/table/style/index.less
+++ b/packages/web-vue/components/table/style/index.less
@@ -860,3 +860,9 @@
     width: auto;
   }
 }
+
+@{arco-theme-tag}[arco-theme='dark'] {
+  .@{table-prefix-cls}-tr-checked .@{table-cls-td} {
+    background-color: @table-color-bg-body-row_active_dark;
+  }
+}
